<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_joy2vel</name>
  <version>1.0.0</version>
  <description>This package converts sensor_msgs::msg::Joy messages to geometry_msgs::msg::Twist, 
  specifically implemented for controlling TurtleBot3 with a joystick via the 'Joy' ROS2 package</description>

  <maintainer email="filippo.samori@studio.unibo.it">filippo</maintainer>
  <license>MIT License</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
